[project]
name = "progan-from-scratch-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "kernel>=0.9.1",
    "matplotlib>=3.10.5",
    "scipy>=1.16.1",
    "tensorboard>=2.20.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
